<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/nav_graph"
        tools:layout_editor_absoluteX="0dp"></fragment>
    <com.gauravk.bubblenavigation.BubbleNavigationLinearView
        android:id="@+id/bottom_navigation_view_linear"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/white"
        android:elevation="8dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/l_item_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_active="true"
            app:bt_colorActive="@color/btnRed"
            app:bt_colorInactive="@color/red_inactive"
            app:bt_icon="@drawable/ic_home"
            app:bt_shape="@drawable/transition_background_drawable_home"
            app:bt_title="@string/txtHome" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/l_item_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_badgeBackgroundColor="@color/greenMain"
            app:bt_colorActive="@color/greenMain"
            app:bt_colorInactive="@color/greenMain"
            app:bt_icon="@drawable/ic_schedule"
            app:bt_shape="@drawable/transition_background_drawable_schedule"
            app:bt_title="@string/txtSchedule" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/l_item_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_colorActive="@color/yellowMain"
            app:bt_colorInactive="@color/yellowMain"
            app:bt_icon="@drawable/ic_notification"
            app:bt_shape="@drawable/transition_background_drawable_notification"
            app:bt_title="@string/txtNotification" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/l_item_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_colorActive="@color/greenMain2"
            app:bt_colorInactive="@color/greenMain2"
            app:bt_icon="@drawable/ic_user"
            app:bt_shape="@drawable/transition_background_drawable_list"
            app:bt_title="@string/txtUser" />


    </com.gauravk.bubblenavigation.BubbleNavigationLinearView>
</androidx.constraintlayout.widget.ConstraintLayout>