<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_white_corner"
    android:paddingBottom="@dimen/_15sdp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimation"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_150sdp"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_fileName="sendemail.json">
    </com.airbnb.lottie.LottieAnimationView>
    <TextView
        android:id="@+id/txtTitle"
        android:textSize="@dimen/_18sdp"
        android:fontFamily="@font/jakartar"
        android:textStyle="bold"
        android:textColor="@color/textGray"
        app:layout_constraintEnd_toEndOf="@id/lottieAnimation"
        app:layout_constraintStart_toStartOf="@id/lottieAnimation"
        app:layout_constraintTop_toBottomOf="@id/lottieAnimation"
        android:text="Check your email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></TextView>
    <TextView
        android:id="@+id/txtMessage"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:fontFamily="@font/jakartar"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/textGray"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/txtTitle"
        app:layout_constraintStart_toStartOf="@id/txtTitle"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        android:text="We have sent a password recover instructions to your email."
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"></TextView>

    <Button
        android:id="@+id/btnResend"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center_vertical"
        android:text="@string/txtResend"
        android:textColor="@color/white"
        android:backgroundTint="@color/btnRed"
        app:layout_constraintStart_toStartOf="@id/txtIfYouDontReceive"
        app:layout_constraintTop_toBottomOf="@id/txtIfYouDontReceive"></Button>

    <TextView
        android:id="@+id/txtIfYouDontReceive"
        android:layout_marginLeft="@dimen/_9sdp"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="@id/txtMessage"
        app:layout_constraintTop_toBottomOf="@id/txtMessage"
        android:text="@string/txtIfYouDontReceiveEmail"
        android:layout_width="@dimen/_235sdp"
        android:layout_height="wrap_content"></TextView>

    <Button
        android:id="@+id/btnSignin"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:backgroundTint="@color/mainColor"
        android:text="@string/btnSignin"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/txtIfYouDontReceive"
        app:layout_constraintTop_toBottomOf="@id/txtIfYouDontReceive"></Button>
</androidx.constraintlayout.widget.ConstraintLayout>