<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/btnReturn"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:background="@null"
        android:src="@drawable/ic_left_line"
        app:layout_constraintEnd_toStartOf="@id/txtForgotPassword"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <TextView
        android:layout_marginTop="@dimen/_6sdp"
        android:id="@+id/txtForgotPassword"
        android:textStyle="bold"
        android:fontFamily="@font/jakartar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/textGray"
        android:gravity="center_vertical"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:textSize="@dimen/_20sdp"
        android:text="@string/titleForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></TextView>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/linearLayoutLine"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_30sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtForgotPassword"
        android:background="@color/textGray"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"></LinearLayout>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimation"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_fileName="forgotpassword.json"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="@id/linearLayoutLine"
        app:layout_constraintStart_toStartOf="@id/linearLayoutLine"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutLine"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="@dimen/_150sdp"></com.airbnb.lottie.LottieAnimationView>

    <TextView
        android:id="@+id/txtMessageForgot"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/jakartar"
        android:text="@string/txtMessageForgotPassword"
        android:textColor="@color/textGray"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/lottieAnimation"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="@id/lottieAnimation"
        app:layout_constraintTop_toBottomOf="@id/lottieAnimation"></TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.08"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_120sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:hint="Email ..."
        app:hintTextColor="@color/mainColor"
        android:textSize="@dimen/_13sdp"
        app:boxStrokeColor="@color/mainColor"
        app:errorEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/txtMessageForgot"
        app:layout_constraintStart_toStartOf="@id/lottieAnimation"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimation"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/mainColor">

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"></com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSend"
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:backgroundTint="@color/mainColor"
        android:elevation="15dp"
        android:paddingLeft="30dp"
        android:paddingBottom="10dp"
        android:text="@string/btnSend"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_send_plane_fill"
        app:iconGravity="end"
        app:iconSize="35dp"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/edtEmail"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/edtEmail"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />
</androidx.constraintlayout.widget.ConstraintLayout>